# formospeech-g2p

./: .gitignore  .pre-commit-config.yaml  README.md  README_zh-TW.md  pyproject.toml
formog2p/: __init__.py  g2p.py  word_segment.py
formog2p/data/english/: lexicon_sinica.json
formog2p/data/hakka/lexicon/ipa/: 客語_詔安.json
formog2p/hakka/: __init__.py  g2p.py
g2p/hakka/: g2p.py
hakka/: __init__.py  g2p.py  word_segment.py
hakka/lexicon/ipa/: 客語_南四縣.json
hakka/lexicon/pinyin/: 客語_南四縣.json
lexicon/ipa/: hak_dp.json  hak_rp.json
lexicon/pinyin/: hak_dp.json  hak_rp.json  hak_za.json
tests/: test_g2p.py  test_word_segment.py
