[project]
name = "formog2p"
version = "0.1.0"
description = "Formosan Languages Grapheme-to-Phoneme (G2P) Toolkit - 台灣本土語言文字轉音素工具"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "HS" }]
keywords = ["hakka", "taiwanese", "g2p", "nlp", "tokenization", "客語", "台灣"]

dependencies = [
    "jieba>=0.42.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hakka"]

[tool.hatch.build.targets.wheel.sources]
"hakka" = "hakka"

[tool.hatch.build.targets.wheel.force-include]
"hakka/lexicon" = "hakka/lexicon"
"hakka/share" = "hakka/share"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
